--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ h4, h3, p {
 /*Title Section*/
 
 #title{
-  background-image: linear-gradient(#2c3e50, #bdc3c7, #fff);
+  background-image: linear-gradient(#E9D8A6, #EE9B00);
 }
 
 .frontpage{
@@ -45,5 +45,5 @@ h4, h3, p {
 .title-img{
   width: 50px;
   height: 100%;
-  
+
 }
